--- a/src/org/ref/morningstar/featured/不稳定市场的投资策略.org
+++ b/src/org/ref/morningstar/featured/不稳定市场的投资策略.org
@@ -1,5 +1,14 @@
 #+STARTUP: INDENT NUM
 
+* 波动市场投资策略简介
+使用以下策略可以让您在大部分波动市场中生存下来
+
+一方面, 没人喜欢投资损失的可能性, 另一方面, 每个人都希望赚更多的钱. 要做到这一点
+必须在动荡的市场中驾驭自己的道路. 这通常需要一些策略, 证券知识和一些运气.
+
+精明的投资者使用各种投资策略来驾驭动荡的市场, 了解的策略越多, 越可能在给定的市场
+下选择一个正确的策略.
+
 * 波动市场中的多元化
 通过投资各种资产类型的证券, 你可以减少风险并增加回报, 这个过程叫做多元化
 ** 分散投资如何使波动性降低
@@ -14,7 +23,7 @@
 - 投资到不同类型的行业或者部门, 比如技术股和医疗股
 - 投资到不同大小的公司, 比如大盘股票和小盘股票
 
-* 使用限价单和止损单来驯服波动
+* 使用限价单(Limit Order)和止损单(Stop Order)来驯服波动
 通常, 当您购买或者卖出证券时, 你使用的是市价单, 市价单立即执行, 你接受在
 那个时刻市场提供的最佳价格. 选择正确的类型来购买证券可以极大地减少投资风险.
 限价单和止损单用来指定你乐意买卖证券的价格
@@ -38,7 +47,7 @@
 除非特别说明, 所有的单都是单日生效, 这意味着如果这些单没执行的话, 则在一天结束时
 取消, 你可以使用取消有效订单保留时间来使得在订单被执行之前一直保持有效状态.
 
-* 使用对冲来抑制波动
+* 使用对冲(Hedging)来抑制波动
 对冲是确保投资不受风险影响的过程, 有好多种方式来对冲风险, 但所有的对冲都试图在任
 何市场变化之下获得收益. 无论证券起落还是保持不变, 对冲都能带来不错的回报. 主要目
 标就是降低投资波动性来抵消风险带来的损失. 当然, 对冲策略不保证一定成功.
@@ -51,7 +60,7 @@
 易. 股票, 债券, 商品甚至货币都可以对冲. 当你在对冲时, 你在尝试消除投资中的一些不
 确定性.
 
-* 以保证金购买杠杆
+* 以保证金购买杠杆(Leverage)
 你也许知道大多数证券交易可以通过经纪人进行, 但你知道可以从经理那里借取资金来进行
 投资吗?
 
@@ -72,7 +81,7 @@
 如果股票贬值到40$每股, 那么你的总市值就是4000$, 你的股权就是1500$(4000-2500)
 当你的股权低于最低维持百分比(比如25%), 那么你就需要存入额外的保证金来维持.
 
-* 利用卖空在低迷市场取得优势
+* 利用卖空(Selling short)在低迷市场取得优势
 卖空是低买高卖的反面, 如果你认为证券的价格将会下跌, 你可以从券商哪里借来证券, 卖
 出, 然后并希望以低于你卖出的价格买回, 然后将证券归还最后赚取差价. 当然, 如果证券
 价格上涨, 你不得不以比卖出价格更高的价格买回它们并还给券商, 从而蒙受损失.
@@ -84,12 +93,12 @@
 幸运, 这个股票下跌到了25$每股, 你仅需2500$就可以买回100股并归还给券商, 你赚了
 2500$, 如果股票上涨到$100每股, 你将掏出$10000购买股票归还, 你亏损了$5000.
 
-* 使用期权策略
+* 使用期权(Option)策略
 期权是在给定时间段以内以预设价格买卖某物的权利. 它通常是一份可以买卖股票或者可交
 易商品的合约. 期权的价格是基于签约的股票或者指数的价值. 证券, 指数, 货币, 利率,
 债务证券都可以使用期权
 
-** 看涨期权和看跌期权
+** 看涨期权(Call)和看跌期权(Put)
 如果你认为证券的价格将会上涨, 你购买看涨期权, 如果你认为价格将会下跌, 你购买看跌
 期权. 看涨期权的拥有者有权在某段时间以固定的价格购买证券, 看跌期权的拥有者有权在
 某段时间以固定的价格售出证券
@@ -124,7 +133,7 @@
 于交易有形的货物, 比如货币和原油. 这些实物货物也被叫做商品. 它们可以在其他证券,
 股票, 指数上发行.
 尽管一般都是用于有形货物, 但也可以用于股票和债券
-** 为什么使用期货
+** 为什么使用期货(Future)
 期货是用来利用未来的价格变动的. 假设你相信小麦价格将会在未来六个月上涨, 你以今天
 的价格购买了6个月后小麦的价格合约, 如果确实上涨了, 那么你可以以更高的价格售出合约
 来获得利润, 如果价格下跌, 你卖出合约, 遭受损害. 因为期货合约涉及了未来的交易, 你
