--- a/src/org/ref/morningstar/featured/资产类别和低迷.org
+++ b/src/org/ref/morningstar/featured/资产类别和低迷.org
@@ -2,7 +2,7 @@
 
 * 经济衰退期债券收益率
   债券收益率受贷款供求、货币政策和通胀预期等因素驱动.
-  [[file:../../../res/image/01.png]]
+  [[file:../../../res/image/asset_01.png]]
   1. 美联邦使用联邦基金利率和现金贴现率作为其实施货币政策的主要工具. 经济衰退期,
      降低利率; 经济扩张期, 调高利率
   2. 短期债券利率波动较大, 长期债券利率相对稳定
@@ -19,7 +19,7 @@
 经济和股市都是周期性的, 美联储通过改变基金利率来影响市场走向：
 - 经济衰退 :: 降低基金利率->货币供应提高->银行提高放贷->刺激投资消费
 - 经济过热 :: 提高基金利率->货币供应降低->银行减少放贷->投资消费放缓
-[[file:../../../res/image/02.png]]
+[[file:../../../res/image/asset_02.png]]
 该图说明了美联储货币政策, 市场回报和衰退期之间的关系. 从历史上看, 衰退时期的特点
 是股市表现不佳和联邦基金利率下降. 衰退期结束的标志是股市表现出色. 很难预测经济周
 期的确切持续时间, 但在大多数情况下, 美联储的行动和随之而来的利率变动与股票表现的
@@ -34,7 +34,7 @@
 原因在于多元化投资是有弱点的, 很多长期看起来多元化的投资, 在遭受重大市场冲击后,
 它们的结构可能会发生变化, 相关性可能会提高, 此时多元化已经不那么"多元"了.
 下表展示了三个时间段内资产类别和市场的相关性:
-[[file:../../../res/image/03.png]]
+[[file:../../../res/image/asset_03.png]]
 所以分散投资不是银弹, 长期证券也可能亏损.
 ** 相关系数
 按照年月化相关系数, 相关性可以分为三类:
@@ -54,7 +54,7 @@
 
 * 金融危机之后的美国市场复苏, 平衡的投资组合
 股价在金融危机时受挫, 但一个平衡的投资组合可以减轻风险
-[[file:../../../res/image/04.png]]
+[[file:../../../res/image/asset_04.png]]
 在使用(60%股票/40%证券)的投资组合下, 尽管在遭受危机时的短期内会有损失, 但长期来看.
 坚持到底的投资者会收获丰厚的回报.
 ** 小心恐惧
@@ -69,7 +69,7 @@
 #+end_quote
 * 金融危机之后的美国市场复苏, 全股票投资组合
 金融危机之后的股价, 通常周期性恢复:
-[[file:../../../res/image/05.png]]
+[[file:../../../res/image/asset_05.png]]
 图片展示了在六次历史性的金融危机之后, 全股票投资组合的回报. 可以看出虽然在初期可
 能会有一定的损失, 但在长的时间内, 回报会更有吸引力, 保持耐心的投资者将会得到可观
 的回报.
