--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -26,7 +26,8 @@ DEADLINE: <2022-05-12 周四 23:00 +1m> SCHEDULED: <2022-05-12 周四 09:00 +1m>
 | [2022-04-12] | house rent | -2000 |
 | [2022-04-13] | buy guitar | -2500 |
 | [2022-04-14] | shopping   |   -10 |
-|              |            | -4510 |
+| [2022-04-16] | shopping   |   -20 |
+|              |            | -4530 |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445, takeout: 284, fee: 218, shopping: 1373, commute: 37
