--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -21,13 +21,18 @@ DEADLINE: <2022-05-12 周四 23:00 +1m> SCHEDULED: <2022-05-12 周四 09:00 +1m>
   house rent: 2000, game: 90, takeout: 727, fee: 218, shopping: 828, commute: 12, course: -1650
   total: 5525
 - State "DONE"       from "TODO"       [2022-03-13 周日 08:57] \\
-| date         | purpose    | value |
-|--------------+------------+-------|
-| [2022-04-12] | house rent | -2000 |
-| [2022-04-13] | buy guitar | -2500 |
-| [2022-04-14] | shopping   |   -10 |
-| [2022-04-16] | shopping   |   -20 |
-|              |            | -4530 |
+| date         | purpose    |  value |
+|--------------+------------+--------|
+| [2022-04-12] | house rent |  -2000 |
+| [2022-04-13] | buy guitar |  -2500 |
+| [2022-04-14] | shopping   |    -10 |
+| [2022-04-16] | shopping   |    -20 |
+| [2022-04-17] | commute    |    -11 |
+| [2022-04-17] | dinner     |   -127 |
+| [2022-04-22] | shopping   |   -2.5 |
+| [2022-04-27] | shopping   |   -2.5 |
+| [2022-04-29] | shopping   |    -86 |
+|              |            | -4759. |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445, takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -43,12 +48,29 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-04-25 周一 23:00 ++1w> SCHEDULED: <2022-04-22 周五 18:00 ++1w>
+DEADLINE: <2022-05-09 周一 23:00 ++1w> SCHEDULED: <2022-05-06 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-04-16 周六 16:06]
+:LAST_REPEAT: [2022-04-29 周五 17:11]
 :END:
+- State "DONE"       from "TODO"       [2022-04-29 周五 17:11] \\
+  1. 处理行动顺序条工单:
+     - 完成了顺序条后的数据处理
+     - 完成了没有动画的UI显示
+     - 在顺序预测和技能表现上还需要和服务端讨论出一个可行的方案
+  2. 处理敌方飘字位置错误问题
+  3. 增加战斗结果信号
+  -------------------------------
+  1. 好严重的痔疮, 人傻了
+  2. 跟旋风进行一个开普勒斯的玩
+- State "DONE"       from "TODO"       [2022-04-25 周一 09:45] \\
+  1. 完成法术编辑器节点扩展:
+     - 完成扩展在编辑器和客户端上的基本流程
+     - 新增编辑器端指令: 简谐振动
+     - 新增客户端指令处理逻辑
+  ----------------------------------------
+  1. 史上最严重的痔疮犯了, 坐卧难安, 好痛苦T.T
 - State "DONE"       from "TODO"       [2022-04-16 周六 16:06] \\
   1. 处理pubuilocation点击跳转错误以及失效问题
   2. 完善月会提出来的ui组件
@@ -841,12 +863,13 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 ** TODO [#A] 每周学习晨星网投资教程一篇 [1/1]                       :event:
-DEADLINE: <2022-04-24 周日 23:59 +1w> SCHEDULED: <2022-04-18 周一 09:00 +1w>
+DEADLINE: <2022-05-01 周日 23:59 +1w> SCHEDULED: <2022-04-25 周一 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-04-12 周二 20:41]
+:LAST_REPEAT: [2022-04-18 周一 12:10]
 :END:
+- State "DONE"       from "TODO"       [2022-04-18 周一 12:10]
 - State "DONE"       from "TODO"       [2022-04-12 周二 20:41]
 - State "DONE"       from "TODO"       [2022-04-02 周六 20:49]
 - State "DONE"       from "TODO"       [2022-03-28 周一 11:40]
@@ -875,11 +898,17 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [2/3]                                             :event:
-SCHEDULED: <2022-04-11 周一 17:27 +1w>
+** TODO [#A] 减肥 [0/3]                                             :event:
+SCHEDULED: <2022-05-02 周一 17:27 +1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-04-11 周一 09:15]
+:LAST_REPEAT: [2022-04-29 周五 15:02]
 :END:
+- State "DONE"       from "TODO"       [2022-04-29 周五 15:02] \\
+  没跑, 痔疮没好
+- State "DONE"       from "TODO"       [2022-04-25 周一 09:55] \\
+  5.0->5.0, 71.0kg  痔疮犯了, 少跑了一次
+- State "DONE"       from "TODO"       [2022-04-18 周一 09:22] \\
+  5.0->5.0->5.0, 71.9kg
 - State "DONE"       from "TODO"       [2022-04-11 周一 09:15] \\
   5.0->5.0->5.0, 72.6kg
 - State "DONE"       from "TODO"       [2022-04-01 周五 21:03] \\
@@ -893,11 +922,16 @@ SCHEDULED: <2022-04-11 周一 17:27 +1w>
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [X] 跑步一次 5.0km
-- [X] 跑步一次 5.0km
+- [ ] 跑步一次 5.0km
+- [ ] 跑步一次 5.0km
 - [ ] 跑步一次 5.0km
 ** TODO [#A] 吉他学习                                               :event:
-SCHEDULED: <2022-04-17 周日 17:00 ++1w>
+SCHEDULED: <2022-04-24 周日 17:00 ++1w>
+:PROPERTIES:
+:LAST_REPEAT: [2022-04-18 周一 09:22]
+:END:
+- State "DONE"       from "TODO"       [2022-04-18 周一 09:22] \\
+  爬格子, 音阶, 小星星, 生日快乐歌
 广州柿子音乐培训, 吉他弹唱课程12期(45分钟一对一), 每周日下午5点开始
 * Appointment
 * Project
