--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -32,7 +32,12 @@ DEADLINE: <2022-05-12 周四 23:00 +1m> SCHEDULED: <2022-05-12 周四 09:00 +1m>
 | [2022-04-22] | shopping   |   -2.5 |
 | [2022-04-27] | shopping   |   -2.5 |
 | [2022-04-29] | shopping   |    -86 |
-|              |            | -4759. |
+| [2022-04-30] | takeout    |    -80 |
+| [2022-05-01] | takeout    |    -60 |
+| [2022-05-02] | takeout    |    -60 |
+| [2022-05-03] | takeout    |    -60 |
+| [2022-05-04] | takeout    |    -60 |
+|              |            | -5079. |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445, takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -48,12 +53,17 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-05-09 周一 23:00 ++1w> SCHEDULED: <2022-05-06 周五 18:00 ++1w>
+DEADLINE: <2022-05-16 周一 23:00 ++1w> SCHEDULED: <2022-05-13 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-04-29 周五 17:11]
+:LAST_REPEAT: [2022-05-07 周六 20:36]
 :END:
+- State "DONE"       from "TODO"       [2022-05-07 周六 20:36] \\
+  1. 重做行动速度条, 采用服务器协议而不是客户端分析
+  2. 重做行动速度条UI, 处理新版滑动动画
+  -------------------------------
+  1. 平平无奇的51
 - State "DONE"       from "TODO"       [2022-04-29 周五 17:11] \\
   1. 处理行动顺序条工单:
      - 完成了顺序条后的数据处理
